# tanks_game_simulation

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run_docker  students.txt
A_Prev_Proj/: main.cpp
A_Prev_Proj/common/: ActionRequest.h  BattleInfo.h  Player.h  PlayerFactory.h  SatelliteView.h  TankAlgorithm.h  TankAlgorithmFactory.h
A_Prev_Proj/include/: ConcentratedPlayer.h  ExtPlayer.h  ExtPlayerFactory.h  ExtSatelliteView.h  ExtTankAlgorithm.h  ExtTankAlgorithmFactory.h  GameManager.h  ObservantPlayer.h  Shell.h  TankInfo.h  TankTypes.h
A_Prev_Proj/src/: ConcentratedPlayer.cpp  ExtBattleInfo.cpp  ExtPlayer.cpp  ExtPlayerFactory.cpp  ExtTankAlgorithm.cpp  ExtTankAlgorithmFactory.cpp  GameManager.cpp  ObservantPlayer.cpp  Shell.cpp  Tank_BFS.cpp  Tank_Sentry.cpp
A_Prev_Proj/tests/: GameManagerTests.cpp
A_Prev_Proj/tests/outputs/: WorkWithOthers.txt  fluid_backwards_partial.txt  input_errors_invalid_chars.txt  input_errors_redundant_rows_cols.txt  multi_a_output.txt  output_b.txt  output_c.txt
A_Prev_Proj/visualizer/: game.js  game_state.json  index.html  style.css
Algorithm/: CMakeLists.txt  README.md
Algorithm/Algo_include/: TankAlgorithm_209277367_322542887.h
Algorithm/Algo_src/: Player_209277367_322542887.cpp  TankAlgorithm_209277367_322542887.cpp
Common/: AbstractGameManager.h  GameManagerRegistration.h  GameResult.h  Player.h  SatteliteView.h  TankAlgorithm.h  TankAlgorithmRegisteration.h
GameManager/: CMakeLists.txt  README.md
GameManager/GM_include/: GM_209277367_322542887.h  TankInfo.h
GameManager/GM_src/: GM_209277367_322542887.cpp
MapChecker/: CMakeLists.txt  README.md
MapGenerator/: CMakeLists.txt  README.md
Simulator/: AlgorithmRegistrar.h  CMakeLists.txt  PlayerRegistration.cpp  README.md  TankAlgorithmRegistration.cpp  cmd_parser.cpp  main.cpp
Simulator/sim_include/: AlgorithmRegistrar.h  GameManagerRegistrar.h  Simulator.h  cmd_parser.h  comparative_simulator.h  competitive_simulator.h
Simulator/sim_src/: GameManagerRegistration.cpp  PlayerRegistration.cpp  Simulator.cpp  TankAlgorithmRegistration.cpp  cmd_parser.cpp  comparative_simulator.cpp  competitive_simulator.cpp  main.cpp
UserCommon/: CMakeLists.txt
UserCommon/UC_include/: Direction.h  ExtBattleInfo.h  ExtSatelliteView.h  RegistrationNames.h
UserCommon/UC_src/: ExtBattleInfo.cpp  ExtSatelliteView.cpp  Shell.cpp
common/: GameManagerRegistration.h
docs/: BuildGuide.md  Docker.md  Overview.md  Testing.md
tests/: test_cmd_parser.cpp  test_comparative_simulator.cpp  test_comperative_simulator  test_comperative_simulator.cpp  test_competitive_simulator.cpp
